syntax = "proto3";

package pb;

import "global.proto";

// todo: change cid to u64 > not yet

// rules: qevent_rpc
service RPC_Channel {
    //rpc Channel (Param) returns (Response);

    // CrDU
    rpc ChannelCreateChannel (ChannelCreateChannelParam) returns (ChannelCreateChannelResponse);
    rpc ChannelEditChannel (ChannelEditChannelParam) returns (ChannelEditChannelResponse);
    rpc ChannelDeleteChannel (ChannelDeleteChannelParam) returns (ChannelDeleteChannelResponse);

    // Author
    rpc ChannelAddAuthor (ChannelAddAuthorParam) returns (ChannelAddAuthorResponse);
    rpc ChannelChangeAuthorPermission (ChannelChangeAuthorPermissionParam) returns (ChannelChangeAuthorPermissionResponse);
    rpc ChannelRemoveAuthor (ChannelRemoveAuthorParam) returns (ChannelRemoveAuthorResponse);

    // Follow
    rpc ChannelFollowChannel (ChannelFollowChannelParam) returns (ChannelFollowChannelResponse);
    rpc ChannelUnFollowChannel (ChannelUnFollowChannelParam) returns (ChannelUnFollowChannelResponse);
    rpc ChannelRemoveFollowers (ChannelRemoveFollowersParam) returns (ChannelRemoveFollowersResponse);

    // Subscribe
    rpc ChannelSubscribe (ChannelSubscribeParam) returns (ChannelSubscribeResponse);
    rpc ChannelUnSubscribe (ChannelUnSubscribeParam) returns (ChannelUnSubscribeResponse);
    rpc ChannelRemoveSubscribers (ChannelRemoveSubscribersParam) returns (ChannelRemoveSubscribersResponse); // PROBEBELY DELETE: AS SUBCROBER LIST SHOULD BE HIDDEN

    // Privacy
    rpc ChannelChangePrivacy (ChannelChangePrivacyParam) returns (ChannelChangePrivacyResponse);
    rpc ChannelChangeDefaultPermission (ChannelChangeDefaultPermissionParam) returns (ChannelChangeDefaultPermissionResponse);
    rpc ChannelRevokeLink (ChannelRevokeLinkParam) returns (ChannelRevokeLinkResponse);
    rpc ChannelChangeUsername (ChannelChangeUsernameParam) returns (ChannelChangeUsernameResponse);
    rpc ChannelBlockProfile (ChannelBlockProfileParam) returns (ChannelBlockProfileResponse);

    // Messages
    rpc ChannelSendMessage (ChannelSendMessageParam) returns (ChannelSendMessageResponse);
    rpc ChannelEditMessage (ChannelEditMessageParam) returns (ChannelEditMessageResponse);
    rpc ChannelDeleteMessages (ChannelDeleteMessagesParam) returns (ChannelDeleteMessagesResponse);

    // Like
    rpc ChannelLikeMessage (ChannelLikeMessageParam) returns (ChannelLikeMessageResponse);
    rpc ChannelUnLikeMessage (ChannelUnLikeMessageParam) returns (ChannelUnLikeMessageResponse);

    // Repost > deprecated
    rpc ChannelReShareMessage (ChannelReShareMessageParam) returns (ChannelReShareMessageResponse);
    rpc ChannelUnReShareMessage (ChannelUnReShareMessageParam) returns (ChannelUnReShareMessageResponse);

    // Comment
    rpc ChannelAddComment (ChannelAddCommentParam) returns (ChannelAddCommentResponse);
    rpc ChannelDeleteComment (ChannelDeleteCommentParam) returns (ChannelDeleteCommentResponse);

    // Pin
    rpc ChannelPinMessage (ChannelPinMessageParam) returns (ChannelPinMessageResponse);
    rpc ChannelUnPinMessage (ChannelUnPinMessageParam) returns (ChannelUnPinMessageResponse);

    // Avatar > todo swap Add <> Avatar
    rpc ChannelAvatarAdd (ChannelAvatarAddParam) returns (ChannelAvatarAddResponse);
    rpc ChannelAvatarDelete (ChannelAvatarDeleteParam) returns (ChannelAvatarDeleteResponse);

    // Settings
    //rpc Channel (Param) returns (Response);

    // Others
    rpc ChannelSendDoingAction (ChannelSendDoingActionParam) returns (ChannelSendDoingActionResponse);
    rpc ChannelReportChannel (ChannelReportChannelParam) returns (ChannelReportChannelResponse);
    rpc ChannelReportMessage (ChannelReportMessageParam) returns (ChannelReportMessageResponse);

    //========= Inbox ===========
    // MarkAsRead / MarkAsUnRead

    // Pin / UnPin
    // Mute
    //========= End of Inbox ===========

    // Views
    rpc ChannelGetFull (ChannelGetFullParam) returns (ChannelGetFullResponse);
    rpc ChannelGetMessagesList (ChannelGetMessagesListParam) returns (ChannelGetMessagesListResponse);
    rpc ChannelGetMediaList (ChannelGetMediaListParam) returns (ChannelGetMediaListResponse);
    rpc ChannelGetAuthors (ChannelGetAuthorsParam) returns (ChannelGetAuthorsResponse);
    rpc ChannelGetFollowers (ChannelGetFollowersParam) returns (ChannelGetFollowersResponse);
    rpc ChannelGetSubscribers (ChannelGetSubscribersParam) returns (ChannelGetSubscribersResponse); // Policy?: should channel owner see this? or just see the follwers
    rpc ChannelBlocked (ChannelBlockedParam) returns (ChannelBlockedResponse); // Policy: NOT YET > Difterent form profile blocks
    rpc ChannelAvatarGetList (ChannelAvatarGetListParam) returns (ChannelAvatarGetListResponse);
    rpc ChannelGetInbox (ChannelGetInboxParam) returns (ChannelGetInboxResponse);

    // Dep
    rpc ChannelGetFollowings (ChannelGetFollowingsParam) returns (ChannelGetFollowingsResponse); // move to profile
}


// CrDU
message ChannelCreateChannelParam {
    string channel_title = 3; // or _name
    string user_name = 4;
    string about = 15;
}

message ChannelCreateChannelResponse {

}


message ChannelEditChannelParam {
    uint32 channel_cid = 1;
    bool set_new_title = 3;
    string new_title = 4;
    bool set_new_about = 5;
    string new_about = 6;
}

message ChannelEditChannelResponse {

}

message ChannelDeleteChannelParam {
    uint32 channel_cid = 1;
}

message ChannelDeleteChannelResponse {

}


// Author
message ChannelAddAuthorParam {
    // NOT NOW
}

message ChannelAddAuthorResponse {
}


message ChannelChangeAuthorPermissionParam {
    // NOT NOW
}

message ChannelChangeAuthorPermissionResponse {
}


message ChannelRemoveAuthorParam {
    // NOT NOW
}

message ChannelRemoveAuthorResponse {
}


// Follow
message ChannelFollowChannelParam {
    uint32 channel_cid = 1;
}

message ChannelFollowChannelResponse {
}


message ChannelUnFollowChannelParam {
    uint32 channel_cid = 1;
}

message ChannelUnFollowChannelResponse {
}


message ChannelRemoveFollowersParam {
    // NOT NOW
}

message ChannelRemoveFollowersResponse {
}


// Subscribe
message ChannelSubscribeParam {
    uint32 channel_cid = 1;
}

message ChannelSubscribeResponse {
}


message ChannelUnSubscribeParam {
    uint32 channel_cid = 1;
}

message ChannelUnSubscribeResponse {
}


message ChannelRemoveSubscribersParam {
    // NTO NOW
}

message ChannelRemoveSubscribersResponse {
}


// Privacy
message ChannelChangePrivacyParam {
    // NOT NOW
}

message ChannelChangePrivacyResponse {

}


message ChannelChangeDefaultPermissionParam {
    // NOT NOW
}

message ChannelChangeDefaultPermissionResponse {
}


message ChannelRevokeLinkParam {
    // NOT NOW
}

message ChannelRevokeLinkResponse {
}


message ChannelChangeUsernameParam {
    // NOT NOW
}

message ChannelChangeUsernameResponse {
}


message ChannelBlockProfileParam {
    // NOT NOW
}

message ChannelBlockProfileResponse {
}


// Messages
message ChannelSendMessageParam {
    uint32 channel_cid = 1;
    NewMessageInput message_input = 2;
}

message ChannelSendMessageResponse {

}


message ChannelEditMessageParam {
    uint32 channel_cid = 1;
    fixed64 message_gid = 4;
    string new_text = 2;
}

message ChannelEditMessageResponse {

}


message ChannelDeleteMessagesParam {
    uint32 channel_cid = 1;
    repeated uint64 message_gids = 3;
}

message ChannelDeleteMessagesResponse {

}


message ChannelClearHistoryParam {
    uint64 from_message_gid = 3;// NOT NOW
}

message ChannelClearHistoryResponse {
}


// Like
message ChannelLikeMessageParam {
    uint32 channel_cid = 1;
    fixed64 message_gid = 2;
}

message ChannelLikeMessageResponse {
}


message ChannelUnLikeMessageParam {
    uint32 channel_cid = 1;
    fixed64 message_gid = 2;
    fixed64 like_gid = 4; //?
}

message ChannelUnLikeMessageResponse {
}


// ReShare
message ChannelReShareMessageParam {
    uint32 channel_cid = 1;
    fixed64 message_gid = 2;
}

message ChannelReShareMessageResponse {
}


message ChannelUnReShareMessageParam {
    uint32 channel_cid = 1;
    fixed64 message_gid = 2;
    fixed64 re_share_gid = 4;
}

message ChannelUnReShareMessageResponse {
}


// Comment
message ChannelAddCommentParam {
    uint32 channel_cid = 1;
    fixed64 message_gid = 2;
    string comment_text = 4;
}

message ChannelAddCommentResponse {
}


message ChannelDeleteCommentParam {
    uint32 channel_cid = 1;
    fixed64 message_gid = 2;
    fixed64 comment_gid = 4;
}

message ChannelDeleteCommentResponse {
}


// Pin
message ChannelPinMessageParam {
    uint32 channel_cid = 1;
}

message ChannelPinMessageResponse {

}


message ChannelUnPinMessageParam {
    uint32 channel_cid = 1;
}

message ChannelUnPinMessageResponse {

}


// Avatar
message ChannelAvatarAddParam {
    uint32 channel_cid = 1;
    uint64 file_id = 2;
}

message ChannelAvatarAddResponse {}


message ChannelAvatarChangeParam {
    // NOT NOW
}

message ChannelAvatarChangeResponse {
}


message ChannelAvatarDeleteParam {
    uint32 channel_cid = 1;
}

message ChannelAvatarDeleteResponse {}


// Others
message ChannelSendDoingActionParam {
    // NOT NOW
}

message ChannelSendDoingActionResponse {
}


message ChannelReportChannelParam {
    // NOT NOW
}

message ChannelReportChannelResponse {
}


message ChannelReportMessageParam {
    // NOT NOW
}

message ChannelReportMessageResponse {
}


// Views
message ChannelGetFullParam {
}

message ChannelGetFullResponse {
}


message ChannelGetMessagesListParam {
}

message ChannelGetMessagesListResponse {
}


message ChannelGetMediaListParam {
}

message ChannelGetMediaListResponse {
}


message ChannelGetAuthorsParam {
}

message ChannelGetAuthorsResponse {
}


message ChannelGetFollowersParam {
}

message ChannelGetFollowersResponse {
}


message ChannelGetFollowingsParam {
}

message ChannelGetFollowingsResponse {
}


message ChannelGetSubscribersParam {
}

message ChannelGetSubscribersResponse {
}


message ChannelBlockedParam {
}

message ChannelBlockedResponse {
}


message ChannelAvatarGetListParam {
    uint32 channel_cid = 1;
}

message ChannelAvatarGetListResponse {}

message ChannelGetInboxParam {
}

message ChannelGetInboxResponse {
}

/*

message Param {
}

message Response {
}

*/

















